updated BottomBarItem to enum
Signed-off-by: Basler182 <showdialog@web.de>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Spezi</string>
+    <string name="home">Startseite</string>
+    <string name="heart_health">Herzgesundheit</string>
+    <string name="medication">Medikation</string>
+    <string name="education">Bildung</string>
 </resources>
