--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Spezi</string>
+    <string name="new_measurement">New Measurement</string>
+    <string name="systolic">Systolic</string>
+    <string name="confirm_button_text">Confirm</string>
+    <string name="cancel_button_text">Cancel</string>
+    <string name="diastolic">Diastolic</string>
+    <string name="pulse_rate">Pulse rate</string>
+    <string name="weight">Weight</string>
 </resources>
