--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,14 @@
     <string name="info_icon_content_description">Info Icon</string>
     <string name="blood_pressure_icon_content_description">Blood Pressure Icon</string>
     <string name="new_measurement_text">Please make a new measurement.</string>
+    <string name="time_range_daily">Daily</string>
+    <string name="time_range_weekly">Weekly</string>
+    <string name="time_range_monthly">Monthly</string>
+    <string name="health_history">History</string>
+    <string name="symptom_type_overall">Overall</string>
+    <string name="symptom_type_physical">Physical</string>
+    <string name="symptom_type_social">Social</string>
+    <string name="symptom_type_quality">Quality</string>
+    <string name="symptom_type_specific">Specific</string>
+    <string name="symptom_type_dizziness">Dizziness</string>
 </resources>
