--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="weight_icon_content_description">Weight Icon</string>
     <string name="blood_pressure_icon_content_description">Blood Pressure Icon</string>
     <string name="new_measurement_text">Please make a new measurement.</string>
+    <string name="dosage_information_dose_row_current_dose">Current Dose:</string>
+    <string name="dosage_information_dose_row_target_dose">Target Dose:</string>
 </resources>
