--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Spezi</string>
     <string name="home">Startseite</string>
-    <string name="heart_health">Herzgesundheit</string>
+    <string name="heart_health">Gesundheit</string>
     <string name="medication">Medikation</string>
     <string name="education">Bildung</string>
     <string name="new_measurement">Neue Messung</string>
@@ -18,4 +18,18 @@
     <string name="info_icon_content_description">Info Icon</string>
     <string name="blood_pressure_icon_content_description">Blutdruck Icon</string>
     <string name="new_measurement_text">Bitte nehmen Sie eine neue Messung vor.</string>
+    <string name="time_range_daily">Täglich</string>
+    <string name="time_range_weekly">Wöchentlich</string>
+    <string name="time_range_monthly">Monatlich</string>
+    <string name="health_history">Historie</string>
+    <string name="symptom_type_overall">Allgemein</string>
+    <string name="symptom_type_physical">Physisch</string>
+    <string name="symptom_type_social">Sozial</string>
+    <string name="symptom_type_quality">Qualität</string>
+    <string name="symptom_type_specific">Spezifisch</string>
+    <string name="symptom_type_dizziness">Schwindel</string>
+    <string name="health_tab_title_symptoms">Symptome</string>
+    <string name="health_tab_title_weight">Gewicht</string>
+    <string name="health_tab_title_blood_pressure">BD</string>
+    <string name="health_tab_title_heart_rate">Herzfrequenz</string>
 </resources>
