Tab titles display (#84)
# *Tab titles display*

## :recycle: Current situation & Problem
In smaller devices the tab titles are displayed in two rows which causes
the tab row to increase its height

## :gear: Release Notes 
Shorter titles were used and missing translations were added


![image](https://github.com/user-attachments/assets/3730d18b-5b5e-4cba-a3dc-9c98ea7222de)

## :pencil: Code of Conduct & Contributing Guidelines 

By submitting creating this pull request, you agree to follow our [Code
of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/StanfordSpezi/.github/blob/main/CONTRIBUTING.md):
- [x] I agree to follow the [Code of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/StanfordSpezi/.github/blob/main/CONTRIBUTING.md).

---------

Signed-off-by: Basler182 <showdialog@web.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="dosage_information_not_available">N/A</string>
     <string name="medication_progress_bar_current">Current</string>
     <string name="medication_progress_bar_target">Target</string>
+    <string name="health_tab_title_symptoms">Symptoms</string>
+    <string name="health_tab_title_weight">Weight</string>
+    <string name="health_tab_title_blood_pressure">BP</string>
+    <string name="health_tab_title_heart_rate">Heart Rate</string>
 </resources>
