--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -18,8 +18,10 @@
     <string name="info_icon_content_description">Info Icon</string>
     <string name="blood_pressure_icon_content_description">Blutdruck Icon</string>
     <string name="new_measurement_text">Bitte nehmen Sie eine neue Messung vor.</string>
+    <string name="medications_no_recommendations">Keine Empfehlungen für Medikamente</string>
     <string name="dosage_information_dose_row_current_dose">Aktuelle Dosis:</string>
     <string name="dosage_information_dose_row_target_dose">Ziel Dosis:</string>
+    <string name="dosage_information_not_available">k.A.</string>
     <string name="medication_progress_bar_current">Aktuell</string>
     <string name="medication_progress_bar_target">Ziel</string>
     <string name="time_range_daily">Täglich</string>
@@ -36,4 +38,7 @@
     <string name="health_tab_title_weight">Gewicht</string>
     <string name="health_tab_title_blood_pressure">BD</string>
     <string name="health_tab_title_heart_rate">Herzfrequenz</string>
+    <string name="close_dialog_content_description">Dialog schließen</string>
+    <string name="sign_out">Ausloggen</string>
+    <string name="health_summary">Gesundheitszusammenfassung</string>
 </resources>
