--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -18,8 +18,10 @@
     <string name="info_icon_content_description">Info Icon</string>
     <string name="blood_pressure_icon_content_description">Blutdruck Icon</string>
     <string name="new_measurement_text">Bitte nehmen Sie eine neue Messung vor.</string>
+    <string name="medications_no_recommendations">Keine Empfehlungen für Medikamente</string>
     <string name="dosage_information_dose_row_current_dose">Aktuelle Dosis:</string>
     <string name="dosage_information_dose_row_target_dose">Ziel Dosis:</string>
+    <string name="dosage_information_not_available">K.A.</string>
     <string name="medication_progress_bar_current">Aktuell</string>
     <string name="medication_progress_bar_target">Ziel</string>
     <string name="time_range_daily">Täglich</string>
@@ -36,4 +38,23 @@
     <string name="health_tab_title_weight">Gewicht</string>
     <string name="health_tab_title_blood_pressure">BD</string>
     <string name="health_tab_title_heart_rate">Herzfrequenz</string>
+    <string name="cancel">Abbrechen</string>
+    <string name="ok">OK</string>
+    <string name="time">Zeit</string>
+    <string name="not_set">Nicht festgelegt</string>
+    <string name="left_wrist">Linkes Handgelenk</string>
+    <string name="right_wrist">Rechtes Handgelenk</string>
+    <string name="left_upper_arm">Linker Oberarm</string>
+    <string name="right_upper_arm">Rechter Oberarm</string>
+    <string name="measurement_location">Position der Messung</string>
+    <string name="standing_up">Stehend</string>
+    <string name="sitting_down">Sitzend</string>
+    <string name="lying_down">Liegend</string>
+    <string name="reclining">Liegend</string>
+    <string name="body_position">Körperposition</string>
+    <string name="add_data">Daten hinzufügen</string>
+    <string name="save">Speichern</string>
+    <string name="close_dialog_icon">Symbol zum Schließen des Dialogs</string>
+    <string name="blood_pressure">Blutdruck</string>
+    <string name="measurement_details">ANGABEN ZUR MESSUNG</string>
 </resources>
