--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -57,4 +57,5 @@
     <string name="close_dialog_icon">Symbol zum Schließen des Dialogs</string>
     <string name="blood_pressure">Blutdruck</string>
     <string name="measurement_details">ANGABEN ZUR MESSUNG</string>
+    <string name="heart_rate">Herzfrequenz</string>
 </resources>
