--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="close_dialog_content_description">Close dialog</string>
     <string name="sign_out">Sign Out</string>
     <string name="health_summary">Health Summary</string>
+    <string name="account">Account</string>
 </resources>
