HealthSummaryAction and MedicationsAction (#86)
# *message actions*

## :recycle: Current situation & Problem
Currently not all expected messages are being handled

## :gear: Release Notes 

- Handling of HealthSummaryAction
- Handling of MedicationsAction

QuestionnaireAction is provided via the following branch
(https://github.com/StanfordSpezi/SpeziKt/tree/feature/questionnaire)
afterwards.

## :white_check_mark: Testing
the required tests are added after the first review


## :pencil: Code of Conduct & Contributing Guidelines 

By submitting creating this pull request, you agree to follow our [Code
of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/StanfordSpezi/.github/blob/main/CONTRIBUTING.md):
- [x] I agree to follow the [Code of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/StanfordSpezi/.github/blob/main/CONTRIBUTING.md).

---------

Signed-off-by: Basler182 <showdialog@web.de>
Co-authored-by: Eldi Cano <eldi.cano@hotmail.com>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -21,7 +21,7 @@
     <string name="medications_no_recommendations">Keine Empfehlungen für Medikamente</string>
     <string name="dosage_information_dose_row_current_dose">Aktuelle Dosis:</string>
     <string name="dosage_information_dose_row_target_dose">Ziel Dosis:</string>
-    <string name="dosage_information_not_available">K.A.</string>
+    <string name="dosage_information_not_available">k.A.</string>
     <string name="medication_progress_bar_current">Aktuell</string>
     <string name="medication_progress_bar_target">Ziel</string>
     <string name="time_range_daily">Täglich</string>
@@ -58,4 +58,8 @@
     <string name="blood_pressure">Blutdruck</string>
     <string name="measurement_details">ANGABEN ZUR MESSUNG</string>
     <string name="heart_rate">Herzfrequenz</string>
+    <string name="close_dialog_content_description">Dialog schließen</string>
+    <string name="sign_out">Ausloggen</string>
+    <string name="health_summary">Gesundheitszusammenfassung</string>
+    <string name="account">Account</string>
 </resources>
