added String Resources for NotificationSettingScreen
Signed-off-by: Basler182 <showdialog@web.de>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -62,4 +62,5 @@
     <string name="sign_out">Ausloggen</string>
     <string name="health_summary">Gesundheitszusammenfassung</string>
     <string name="account">Account</string>
+    <string name="notifications">Benachrichtigungen</string>
 </resources>
