--- a/core/notification/src/main/res/values/strings.xml
+++ b/core/notification/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="notification_settings">Notification Settings</string>
     <string name="back">Back</string>
     <string name="reminders">Reminders</string>
-    <string name="appointment">Appointment</string>
-    <string name="survey">Survey</string>
-    <string name="vital">Vital</string>
+    <string name="appointment">Appointments</string>
+    <string name="survey">Surveys</string>
+    <string name="vital">Vitals</string>
     <string name="updates">Updates</string>
     <string name="medications">Medications</string>
     <string name="recommendations">Recommendations</string>
