added missing DE translations
Signed-off-by: Basler182 <showdialog@web.de>

--- a/core/notification/src/main/res/values-de/strings.xml
+++ b/core/notification/src/main/res/values-de/strings.xml
@@ -13,4 +13,6 @@
     <string name="recommendations">Empfehlungen</string>
     <string name="weight_trends">Gewichtstrends</string>
     <string name="trends">Trends</string>
+    <string name="feature_requires_notifications">Diese Funktion erfordert die Genehmigung zum Senden von Benachrichtigungen.</string>
+    <string name="settings">Einstellungen</string>
 </resources>
