--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -62,5 +62,19 @@
     <string name="sign_out">Ausloggen</string>
     <string name="health_summary">Gesundheitszusammenfassung</string>
     <string name="account">Account</string>
+    <string name="bluetooth_initializing_description">Initialisierung der Bluetooth-Verbindung...</string>
+    <string name="bluetooth_not_enabled_description">Bluetooth ist nicht aktiviert. Bitte besuchen Sie die Geräteeinstellungen und aktivieren Sie Bluetooth, um Messungen von Ihren angeschlossenen Geräten empfangen zu können.</string>
+    <string name="bluetooth_permissions_not_granted_description">Berechtigungen nicht erteilt, bitte besuchen Sie die Geräteeinstellungen und erteilen Sie die erforderlichen Bluetooth-Berechtigungen, um Messungen von Ihren verbundenen Geräten empfangen zu können</string>
+    <string name="home_settings_action">Einstellungen</string>
+    <string name="paired_devices_hint_description">Gekoppelte Geräte werden hier angezeigt, sobald sie eingerichtet sind. Halten Sie die Bluetooth-Taste 3 Sekunden lang gedrückt, um das Gerät in den Kopplungsmodus zu versetzen.</string>
     <string name="notifications">Benachrichtigungen</string>
+    <string name="heart_rate_description_part_1">Die Herzfrequenz ist die Anzahl der Schläge Ihres Herzens pro Minute. Die Überprüfung Ihrer Herzfrequenz hilft Ihrem Pflegeteam zu erkennen, wie Sie auf Ihre Medikamente ansprechen und ob die Medikamente geändert werden müssen.</string>
+    <string name="heart_rate_description_part_2">"Jeder Mensch hat eine andere normale Herzfrequenz. Eine Herzfrequenz unter 50 kann Sie schwindelig machen. Wenn Ihre Herzfrequenz plötzlich ansteigt und hoch bleibt, sollten Sie Ihr Pflegeteam informieren. "</string>
+    <string name="heart_rate_description_part_3">Ihre Herzfrequenz wird bei der Blutdruckmessung überprüft. Weitere Informationen finden Sie im Video zur Herzfrequenz.</string>
+    <string name="weight_description_part_1">Wenn das Herz geschwächt ist, kann der Körper mehr Salz und Wasser speichern und das Gewicht kann schnell ansteigen. Dies kann zu Atembeschwerden, geschwollenen Beinen und einem aufgeblähten Bauch führen.</string>
+    <string name="weight_description_part_2">Kleine Gewichtsveränderungen sind normal. Wenn Sie jedoch mehr als 3 Pfund an einem Tag oder mehr als 5 Pfund in einer Woche zunehmen, sollten Sie mit Ihrem Pflegeteam sprechen.</string>
+    <string name="weight_description_part_3">Überprüfen Sie Ihr Gewicht jeden Tag zur gleichen Tageszeit, um festzustellen, ob sich möglicherweise Flüssigkeit angesammelt hat. Weitere Informationen finden Sie im Video zum Gewicht.</string>
+    <string name="blood_pressure_description_part_1">Der Blutdruck misst die Kraft in Ihren Blutgefäßen, mit der Ihr Herz das Blut in Ihren Körper pumpt. Überprüfen Sie Ihren Blutdruck täglich, um zu sehen, wie Ihr Herz auf die Medikamente reagiert.</string>
+    <string name="blood_pressure_description_part_2">Der höchste Wert des Blutdrucks (systolisch genannt) sollte unter 130 mmHg liegen. Welcher Blutdruck zu niedrig ist, ist von Person zu Person unterschiedlich und sollte mit Ihrem Pflegeteam besprochen werden. Ein zu niedriger Blutdruck kann dazu führen, dass Sie sich schwindlig fühlen.</string>
+    <string name="blood_pressure_description_part_3">Treiben Sie in den 30 Minuten vor der Blutdruckmessung keinen Sport. Vergewissern Sie sich, dass die Manschette gut um Ihren Oberarm passt, und legen Sie die Beine nicht übereinander. Weitere Informationen finden Sie im Video zum Blutdruckmessen.</string>
 </resources>
