--- a/core/notification/src/main/res/values/strings.xml
+++ b/core/notification/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="recommendations">Recommendations</string>
     <string name="weight_trends">Weight Trends</string>
     <string name="trends">Trends</string>
+    <string name="feature_requires_notifications">This feature requires permission to send notifications.</string>
+    <string name="settings">Settings</string>
 </resources>
