--- a/modules/account/src/main/res/values/strings.xml
+++ b/modules/account/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="please_enter_a_valid_email">Please enter a valid email.</string>
     <string name="failed_to_send_email">Failed to send email.</string>
     <string name="email_sent">Email sent.</string>
+    <string name="google_icon">Google Icon</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="or">OR</string>
+    <string name="your_account">Your Account</string>
+    <string name="password">Password</string>
+    <string name="hide_password">Hide password</string>
+    <string name="show_password">Show password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="don_t_have_an_account_yet">Don\'t have an Account yet?</string>
 </resources>
