--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,9 +70,19 @@
     <string name="bluetooth_not_enabled_description">"Bluetooth not enabled, please visit device settings and enable bluetooth to be able to receive measurements from your connected devices"</string>
     <string name="bluetooth_permissions_not_granted_description">Permissions not granted, please visit device settings and grant required bluetooth permissions be able to receive measurements from your connected devices"</string>
     <string name="home_settings_action">Settings</string>
-    <string name="paired_devices_hint_description">Paired devices will appear here once set up. Hold down the bluetooth button for 3 seconds to put the device into pairing mode.</string>
+    <string name="paired_devices_hint_description">Paired devices will appear here once set up. Press (+) button to pair a new device.</string>
     <string name="delete_health_record">Delete health record</string>
     <string name="health_record_deletion_description">Are you sure you want to permanently remove this health record? This action cannot be undone.</string>
     <string name="delete_health_record_failure_message">Unable to delete the health record. Please try again.</string>
     <string name="delete_health_record_success_message">Health record deleted successfully.</string>
+    <string name="ble_device_pair_action_title">Pair</string>
+    <string name="ble_device_pair_done_action_title">Done</string>
+    <string name="ble_device_discovering_title">Discovering</string>
+    <string name="ble_device_discovering_subtitle">Hold down the bluetooth button for 3 seconds to put the device into pairing mode.</string>
+    <string name="ble_device_found_title">Pair Accessory</string>
+    <string name="ble_device_found_subtitle">Do you want to pair %1$s with ENGAGEHF app?</string>
+    <string name="ble_device_paired_title">Accessory Paired</string>
+    <string name="ble_device_paired_subtitle">%1$s was successfully paired with ENGAGEHF app</string>
+    <string name="ble_device_error_title">Error</string>
+    <string name="ble_device_error_subtitle">Something went wrong, please try again later.</string>
 </resources>
