Set app name & icon

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Spezi</string>
+    <string name="app_name">ENGAGEHF</string>
     <string name="home">Startseite</string>
     <string name="heart_health">Gesundheit</string>
     <string name="medication">Medikation</string>
