Feature/sign out #89 (#118)
# *Feature/sign out*

## :recycle: Current situation & Problem
When a user signs out, the app currently doesn't do anything.

## :gear: Release Notes 
- User is returned to the correct starting point after signing out.

## :pencil: Code of Conduct & Contributing Guidelines 

By submitting creating this pull request, you agree to follow our [Code
of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/StanfordSpezi/.github/blob/main/CONTRIBUTING.md):
- [x] I agree to follow the [Code of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com/StanfordSpezi/.github/blob/main/CONTRIBUTING.md).

---------

Signed-off-by: Basler182 <showdialog@web.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="on_target_dose_that_best_helps_your_heart">On target dose that best helps your heart</string>
     <string name="on_medication_but_may_benefit_from_a_higher_dose">On medication but may benefit from a higher dose</string>
     <string name="not_on_this_medication_that_may_help_your_heart">Not on this medication that may help your heart</string>
+    <string name="sign_out_failed">Sign out failed.</string>
 </resources>
