--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="sign_out_failed">Sign out failed.</string>
     <string name="invitation_code">Invitation Code</string>
     <string name="onboarding">Onboarding</string>
+    <string name="contact">Contact</string>
 </resources>
