--- a/modules/account/src/main/res/values/strings.xml
+++ b/modules/account/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="e_mail_address">E-Mail Address</string>
     <string name="signup">Signup</string>
     <string name="login">Login</string>
+    <string name="login_screen_description">You may login to your existing account or create a new one if you don\'t have one already. You can also sign in with your Google Account.</string>
 </resources>
