Error handling when generating Health summary (#146)
# *Health summary PDF generation*

## :recycle: Current situation & Problem
- Even though the summary pdf was generated successfully, the service
was throwing because there was no PDF viewer app installed in the device
- We were able to catch the error and were attempting to show a toast.
However, since the code is being executed in a background thread, the
app was crashing because toast must be executed in the main thread.

Addressed the issue by:
- Ensuring that toast messages are executed always in the main thread
- Explicitly check whether after PDF generation whether there is an
appropriate pdf reader app installed in the device. If not we display a
toast message that summary is generated successfully but no pdf reader
installed in the device. In case of success, the user will have the
option to select the the pdf reader app via a default android bottom
sheet


## :gear: Release Notes 
*Add a bullet point list summary of the feature and possible migration
guides if this is a breaking change so this section can be added to the
release notes.*
*Include code snippets that provide examples of the feature implemented
or links to the documentation if it appends or changes the public
interface.*


## :books: Documentation
*Please ensure that you properly document any additions in conformance
to [Spezi Documentation
Guide](https://github.com/StanfordSpezi/.github/blob/main/DOCUMENTATIONGUIDE.md).*
*You can use this section to describe your solution, but we encourage
contributors to document your reasoning and changes using in-line
documentation.*


## :white_check_mark: Testing
*Please ensure that the PR meets the testing requirements set by CodeCov
and that new functionality is appropriately tested.*
*This section describes important information about the tests and why
some elements might not be testable.*


## :pencil: Code of Conduct & Contributing Guidelines 

By subm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,6 @@
     <string name="dizziness_score_title">Dizziness Score</string>
     <string name="dizziness_score_description">Your dizziness is important to keep track of because dizziness can be a side effect of your heart or your heart medicines.</string>
     <string name="error_while_handling_message_action">Error while handling message action.</string>
+    <string name="no_pdf_reader_app_installed_error_message">Health Summary generated successfully, but no PDF reader is installed on the device</string>
+    <string name="health_summary_generate_error_message">Failed to generate Health Summary</string>
 </resources>
