--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,13 +97,14 @@
     <string name="ble_device_error_subtitle">Something went wrong, please try again later.</string>
     <string name="your_devices_header_title">Your devices</string>
     <string name="last_seen_on">Last seen on %1$s</string>
-    <string name="medication_you_are_taking">Medication You are Taking</string>
+    <string name="current_medications">Current Medications</string>
     <string name="medications_that_may_help">Medications That May Help</string>
     <string name="color_key">Color key</string>
     <string name="no_medications_to_show">No medications to show</string>
-    <string name="on_target_dose_that_best_helps_your_heart">On target dose that best helps your heart</string>
-    <string name="on_medication_but_may_benefit_from_a_higher_dose">On medication but may benefit from a higher dose</string>
-    <string name="not_on_this_medication_that_may_help_your_heart">Not on this medication that may help your heart</string>
+    <string name="you_are_on_the_target_dose">You are on your target dose.</string>
+    <string name="you_are_on_this_medication">You are on this medication, but it may benefit from a higher dose.</string>
+    <string name="more_information_needed">More information is needed to make a recommendation.</string>
+    <string name="you_are_not_on_this_medication">You are not on this medication, but it might be helpful in the future.</string>
     <string name="sign_out_failed">Sign out failed.</string>
     <string name="invitation_code">Invitation Code</string>
     <string name="onboarding">Onboarding</string>
