adapt missing bluetooth permissions info text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
     <string name="lbs" translatable="false">lbs</string>
     <string name="bluetooth_initializing_description">"Initializing bluetooth connection..."</string>
     <string name="bluetooth_not_enabled_description">"Bluetooth not enabled, please visit device settings and enable bluetooth to be able to receive measurements from your connected devices"</string>
-    <string name="bluetooth_permissions_not_granted_description">Permissions not granted, please visit device settings and grant required bluetooth permissions be able to receive measurements from your connected devices"</string>
+    <string name="bluetooth_permissions_not_granted_description">Permissions not granted. Please visit device settings and grant the required Location and Nearby devices permissions to receive measurements from your connected devices."</string>
     <string name="home_settings_action">Settings</string>
     <string name="paired_devices_hint_description">Paired devices will appear here once set up. Press (+) button to pair a new device.</string>
     <string name="delete_health_record">Delete health record</string>
