--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="symptom_type_overall">Overall</string>
     <string name="symptom_type_physical">Physical</string>
     <string name="symptom_type_social">Social</string>
-    <string name="symptom_type_quality">Quality</string>
+    <string name="symptom_type_quality">Quality of Life</string>
     <string name="symptom_type_specific">Symptoms</string>
     <string name="symptom_type_dizziness">Dizziness</string>
     <string name="medications_no_recommendations">No medication recommendations</string>
@@ -118,7 +118,7 @@
     <string name="social_limits_score_description">This score represents how your heart affects your ability to do social activities. Higher scores mean you are able to do more, while lower scores mean you are more limited by your heart.</string>
     <string name="quality_of_life_score_title">Quality of Life Score</string>
     <string name="quality_of_life_score_description">This score represents how content you are with your heart symptoms. Higher scores mean you are overall more content, while lower scores mean you are less satisfied with how you are doing.</string>
-    <string name="symptoms_frequency_score_title">Symptom Frequency</string>
+    <string name="symptoms_frequency_score_title">Symptom Frequency Score</string>
     <string name="specific_symptoms_score_description">This represents the frequency you are experiencing heart-related symptoms. Higher scores mean less frequent symptoms and lower scores mean more frequent symptoms.</string>
     <string name="dizziness_score_title">Dizziness Score</string>
     <string name="dizziness_score_description">Your dizziness is important to keep track of because dizziness can be a side effect of your heart or your heart medicines.</string>
