--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="error_while_handling_message_action">Error while handling message action.</string>
     <string name="no_pdf_reader_app_installed_error_message">Health Summary generated successfully, but no PDF reader is installed on the device</string>
     <string name="health_summary_generate_error_message">Failed to generate Health Summary</string>
+    <string name="dismiss_message">Remove message</string>
 </resources>
