Study concluded screen (#177)
# *Study concluded screen*

## :recycle: Current situation & Problem
- Fixes #175 
- Added snapshot listener after in main app screen to render three
states: 1. Loading (until the first emission) 2. Normal app screen state
if user not disabled. 3. Study concluded otherwise
- Extended and adapted related unit tests
- Account settings are still accessible, however I noticed that
generation of Health summary fails with:
`com.google.firebase.functions.FirebaseFunctionsException: User is
disabled.`
- I used @PSchmiedmayer account in stage environment since it was
already marked as `disabled`

<img
src="https://github.com/user-attachments/assets/ec796e1d-f765-4361-85e9-6e0ee09dc9c6"
width="300">


## :gear: Release Notes 
*Add a bullet point list summary of the feature and possible migration
guides if this is a breaking change so this section can be added to the
release notes.*
*Include code snippets that provide examples of the feature implemented
or links to the documentation if it appends or changes the public
interface.*


## :books: Documentation
*Please ensure that you properly document any additions in conformance
to [Spezi Documentation
Guide](https://github.com/StanfordSpezi/.github/blob/main/DOCUMENTATIONGUIDE.md).*
*You can use this section to describe your solution, but we encourage
contributors to document your reasoning and changes using in-line
documentation.*


## :white_check_mark: Testing
*Please ensure that the PR meets the testing requirements set by CodeCov
and that new functionality is appropriately tested.*
*This section describes important information about the tests and why
some elements might not be testable.*


## :pencil: Code of Conduct & Contributing Guidelines 

By submitting creating this pull request, you agree to follow our [Code
of
Conduct](https://github.com/StanfordSpezi/.github/blob/main/CODE_OF_CONDUCT.md)
and [Contributing
Guidelines](https://github.com

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ENGAGEHF</string>
+    <string name="app_name">ENGAGE-HF</string>
     <string name="home">Home</string>
     <string name="heart_health">Heart Health</string>
     <string name="medication">Medication</string>
@@ -131,4 +131,6 @@
     <string name="error_while_handling_message_action">Error while handling message action.</string>
     <string name="no_pdf_reader_app_installed_error_message">Health Summary generated successfully, but no PDF reader is installed on the device</string>
     <string name="health_summary_generate_error_message">Failed to generate Health Summary</string>
+    <string name="study_concluded_title">Thank you for participating in the ENGAGE-HF Study!</string>
+    <string name="study_concluded_description">Your account was deactivated by your study conductor!</string>
 </resources>
